complete about section

--- a/index.html
+++ b/index.html
@@ -4,8 +4,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Website | Fatai Balogun</title>
     <link rel="stylesheet" href="./style.css" />
+    <script
+      src="https://kit.fontawesome.com/13ee76e205.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <h1>Hello, world</h1>
+    <nav>
+      <span class="branding">FB</span>
+      <ul>
+        <a href="#about">About</a>
+        <a href="#project">Project</a>
+        <a href="#contact">Contact</a>
+      </ul>
+    </nav>
+
+    <header id="about">
+      <h1>Hello! 👋</h1>
+      <p>I'm a Fatai Balogun, a full-stack software engineer</p>
+      <p>
+        Experienced Software Engineer with a demonstrated history of working in
+        the information technology and services industry. Skilled in Node.js,
+        Reactjs, MongoDB, and Web Development. I am looking forward to building
+        products that will challenge and test my competence in a way that allows
+        me to contribute effectively, while also developing my skills
+      </p>
+    </header>
+
+    <section id="project">
+      <div class="project-container">
+        <div class="project">
+          <img src="#1" alt="sayurs" />
+          <p>Sayurs</p>
+        </div>
+        <div class="project">
+          <img src="#1" alt="sayurs" />
+          <p>Sayurs</p>
+        </div>
+        <div class="project">
+          <img src="#1" alt="sayurs" />
+          <p>Sayurs</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="contact">
+      <ul>
+        <li>
+          <a
+            href="https://www.linkedin.com/in/fatai-balogun-88754b171/"
+            target="_blank"
+            ><i class="fab fa-linkedin"></i
+          ></a>
+        </li>
+        <li>
+          <a href="" target="_blank"><i class="fab fa-twitter"></i></a>
+        </li>
+        <li>
+          <a href="" target="_blank"><i class="fab fa-github"></i></a>
+        </li>
+        <li>
+          <a href="" target="_blank"><i class="fab fa-facebook"></i></a>
+        </li>
+        <li>
+          <a href="" target="_blank"><i class="fas fa-thumbs-up"></i></a>
+        </li>
+      </ul>
+    </section>
+
+    <footer>Made with love by fattylee</footer>
   </body>
 </html>
