complete social link and projects

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html lang="en">
   <head>
+    <link
+      rel="shortcut icon"
+      href="https://img.icons8.com/material-outlined/24/000000/monitor.png"
+      type="image/png"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Website | Fatai Balogun</title>
@@ -32,23 +37,66 @@
     </header>
 
     <section id="project">
+      <h2>Projects</h2>
       <div class="project-container">
         <div class="project">
-          <img src="#1" alt="sayurs" />
+          <a
+            href="https://fattylee-sayurs.netlify.app/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img
+              src="https://live.staticflickr.com/65535/50852727786_049f4e290c_z.jpg"
+              alt="sayurs"
+          /></a>
           <p>Sayurs</p>
         </div>
         <div class="project">
-          <img src="#1" alt="sayurs" />
+          <a
+            href="https://fattylee-storybook.herokuapp.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img
+              src="https://live.staticflickr.com/65535/50853039501_c2d473ec6b_z.jpg"
+              alt="sayurs"
+          /></a>
+          <p>Storybook</p>
+        </div>
+        <div class="project">
+          <img
+            src="https://live.staticflickr.com/65535/50852727786_049f4e290c_z.jpg"
+            alt="sayurs"
+          />
           <p>Sayurs</p>
         </div>
         <div class="project">
-          <img src="#1" alt="sayurs" />
+          <img
+            src="https://live.staticflickr.com/65535/50853039501_c2d473ec6b_z.jpg"
+            alt="sayurs"
+          />
+          <p>Sayurs</p>
+        </div>
+        <div class="project">
+          <img
+            src="https://live.staticflickr.com/65535/50852727786_049f4e290c_z.jpg"
+            alt="sayurs"
+          />
+          <p>Sayurs</p>
+        </div>
+        <div class="project">
+          <img
+            src="https://live.staticflickr.com/65535/50853039501_c2d473ec6b_z.jpg"
+            alt="sayurs"
+          />
           <p>Sayurs</p>
         </div>
       </div>
     </section>
 
     <section id="contact">
+      <h2>Social Media</h2>
+      <p>You can find me on</p>
       <ul>
         <li>
           <a
@@ -58,20 +106,32 @@
           ></a>
         </li>
         <li>
-          <a href="" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a href="https://twitter.com/Fattylee7" target="_blank"
+            ><i class="fab fa-twitter"></i
+          ></a>
         </li>
         <li>
-          <a href="" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://github.com/Fattylee/" target="_blank"
+            ><i class="fab fa-github"></i
+          ></a>
         </li>
         <li>
-          <a href="" target="_blank"><i class="fab fa-facebook"></i></a>
+          <a href="https://facebook.com/fatai.balogun1" target="_blank"
+            ><i class="fab fa-facebook"></i
+          ></a>
+        </li>
+
+        <li>
+          <a href="tel:+2348062870354" target="_blank">
+            <i class="fas fa-phone"></i>
+          </a>
         </li>
         <li>
-          <a href="" target="_blank"><i class="fas fa-thumbs-up"></i></a>
+          <a href="" target="_blank"><i class="fas fa-envelope"></i></a>
         </li>
       </ul>
     </section>
 
-    <footer>Made with love by fattylee</footer>
+    <footer>Made with <i class="fas fa-heart"></i> by Fatai Balogun</footer>
   </body>
 </html>
