add 3 unique projects

--- a/index.html
+++ b/index.html
@@ -39,58 +39,63 @@
     <section id="project">
       <h2>Projects</h2>
       <div class="project-container">
-        <div class="project">
-          <a
-            href="https://fattylee-sayurs.netlify.app/"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <img
-              src="https://live.staticflickr.com/65535/50852727786_049f4e290c_z.jpg"
-              alt="sayurs"
-          /></a>
+        <a
+          class="project"
+          href="https://fattylee-sayurs.netlify.app/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img
+            src="https://live.staticflickr.com/65535/50852727786_049f4e290c_z.jpg"
+            alt="sayurs"
+          />
           <p>Sayurs</p>
-        </div>
-        <div class="project">
-          <a
-            href="https://fattylee-storybook.herokuapp.com/"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <img
-              src="https://live.staticflickr.com/65535/50853039501_c2d473ec6b_z.jpg"
-              alt="sayurs"
-          /></a>
+        </a>
+        <a
+          class="project"
+          href="https://fattylee-storybook.herokuapp.com/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img
+            src="https://live.staticflickr.com/65535/50853039501_c2d473ec6b_z.jpg"
+            alt="sayurs"
+          />
           <p>Storybook</p>
-        </div>
-        <div class="project">
+        </a>
+        <a
+          class="project"
+          href="https://fattylee-web-chat.herokuapp.com/
+"
+          target="_blank"
+        >
           <img
-            src="https://live.staticflickr.com/65535/50852727786_049f4e290c_z.jpg"
-            alt="sayurs"
+            src="https://live.staticflickr.com/65535/50915503213_9b11244564_z.jpg"
+            alt="web chat"
           />
-          <p>Sayurs</p>
-        </div>
-        <div class="project">
-          <img
-            src="https://live.staticflickr.com/65535/50853039501_c2d473ec6b_z.jpg"
-            alt="sayurs"
-          />
-          <p>Sayurs</p>
-        </div>
-        <div class="project">
-          <img
-            src="https://live.staticflickr.com/65535/50852727786_049f4e290c_z.jpg"
-            alt="sayurs"
-          />
-          <p>Sayurs</p>
-        </div>
-        <div class="project">
+          <p>Web chat</p>
+        </a>
+        <a class="project">
           <img
             src="https://live.staticflickr.com/65535/50853039501_c2d473ec6b_z.jpg"
             alt="sayurs"
           />
           <p>Sayurs</p>
-        </div>
+        </a>
+        <a class="project">
+          <img
+            src="https://live.staticflickr.com/65535/50852727786_049f4e290c_z.jpg"
+            alt="sayurs"
+          />
+          <p>Sayurs</p>
+        </a>
+        <a class="project">
+          <img
+            src="https://live.staticflickr.com/65535/50853039501_c2d473ec6b_z.jpg"
+            alt="sayurs"
+          />
+          <p>Sayurs</p>
+        </a>
       </div>
     </section>
 
