--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <header id="about">
       <h1>Hello! 👋</h1>
-      <p>I'm a Fatai Balogun, a full-stack software engineer</p>
+      <p>I'm Fatai Balogun, a full-stack software engineer</p>
       <p>
         Experienced Software Engineer with a demonstrated history of working in
         the information technology and services industry. Skilled in Node.js,
@@ -75,12 +75,16 @@
           />
           <p>Web chat</p>
         </a>
-        <a class="project">
+        <a
+          class="project"
+          href="https://fattylee-storybook.herokuapp.com/react/expenses"
+          target="_blank"
+        >
           <img
-            src="https://live.staticflickr.com/65535/50853039501_c2d473ec6b_z.jpg"
+            src="https://live.staticflickr.com/65535/50916273756_71bfd6767e_z.jpg"
             alt="sayurs"
           />
-          <p>Sayurs</p>
+          <p>Expensify</p>
         </a>
         <a class="project">
           <img
