add five projects

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         >
           <img
             src="https://live.staticflickr.com/65535/50853039501_c2d473ec6b_z.jpg"
-            alt="sayurs"
+            alt="storybook"
           />
           <p>Storybook</p>
         </a>
@@ -82,16 +82,20 @@
         >
           <img
             src="https://live.staticflickr.com/65535/50916273756_71bfd6767e_z.jpg"
-            alt="sayurs"
+            alt="expensify"
           />
           <p>Expensify</p>
         </a>
-        <a class="project">
+        <a
+          class="project"
+          href="https://fattylee-todos-api.herokuapp.com"
+          target="_blank"
+        >
           <img
-            src="https://live.staticflickr.com/65535/50852727786_049f4e290c_z.jpg"
-            alt="sayurs"
+            src="https://live.staticflickr.com/65535/50918143968_7481213684.jpg"
+            alt="fattylee web services api"
           />
-          <p>Sayurs</p>
+          <p>Fattylee web services api</p>
         </a>
         <a class="project">
           <img
