add 6 projects(portfolio is the last)

--- a/index.html
+++ b/index.html
@@ -97,12 +97,16 @@
           />
           <p>Fattylee web services api</p>
         </a>
-        <a class="project">
+        <a
+          class="project"
+          href="https://fatai-balogun-portfolio.netlify.app"
+          target="_blank"
+        >
           <img
-            src="https://live.staticflickr.com/65535/50853039501_c2d473ec6b_z.jpg"
-            alt="sayurs"
+            src="https://live.staticflickr.com/65535/50918366788_52fd8342d5.jpg"
+            alt="portfolio website"
           />
-          <p>Sayurs</p>
+          <p>Portfolio Website</p>
         </a>
       </div>
     </section>
