fix grammer errors

--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
 
     <header id="about">
       <h1>Hello! 👋</h1>
-      <p>I'm Fatai Balogun, a full-stack software engineer</p>
+      <p>I'm Fatai Balogun, a full-stack software engineer.</p>
       <p>
-        Experienced Software Engineer with a demonstrated history of working in
-        the information technology and services industry. Skilled in Node.js,
-        Reactjs, MongoDB, and Web Development. I am looking forward to building
-        products that will challenge and test my competence in a way that allows
-        me to contribute effectively, while also developing my skills
+        I'm an experienced Software Engineer with a demonstrated history of
+        working in the information technology and services industry. I'm skilled
+        in Nodejs, Reactjs, MongoDB, and Web Development. I am looking forward
+        to building products that will challenge and test my competence in a way
+        that allows me to contribute effectively while also developing my
+        skills.
       </p>
     </header>
 
