--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Fattylee portfolio website creating unparalleled modern SEO friendly modern website."
+    />
+    <meta name="title" property="og:title" content="Portfolio website" />
+    <meta property="og:type" content="Website" />
+    <meta
+      name="image"
+      property="og:image"
+     content ="https://live.staticflickr.com/65535/50918366788_a9ede53a87.jpg"
+    />
+    <meta name="description" property="og:description" content="Fattylee portfolio website creating unparalleled modern SEO friendly modern website" />
+    <meta name="author" content="Fatai Balogun" />
+
     <title>Portfolio Website | Fatai Balogun</title>
     <link rel="stylesheet" href="./style.css" />
     <script
