--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <nav>
-      <span class="branding">FB</span>
+      <a href="#about" class="branding">FB</a>
       <ul>
         <a href="#about">About</a>
         <a href="#project">Project</a>
@@ -215,7 +215,7 @@
           </a>
         </li>
         <li>
-          <a href="" target="_blank"><i class="fas fa-envelope"></i></a>
+          <a href="mailto:fattylee.remod@gmail.com?body=Hello%20Fatai,%20I%20hope%20this%20mail%20meets%20you%20well?%20I%20need%20XYZ...&subject=Software%20Developer%20Job" target="_blank"><i class="fas fa-envelope"></i></a>
         </li>
       </ul>
     </section>
