add broken img css

--- a/button.html
+++ b/button.html
@@ -11,5 +11,18 @@
     <p>
       <button class="threedee-btn">3 Button</button>
     </p>
+
+    <div class="parent">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>4</div>
+      <div>5</div>
+      <div>6</div>
+      <div>7</div>
+    </div>
+
+    <img src="broken" alt="flying bird" /><br />
+    <img src="broken" alt="walking dead" />
   </body>
 </html>
