test without broken image

--- a/button.html
+++ b/button.html
@@ -23,6 +23,6 @@
     </div>
 
     <img src="broken" alt="flying bird" /><br />
-    <img src="broken" alt="walking dead" />
+    <img src="./header-bg.jpg" alt="walking dead" />
   </body>
 </html>
