improve contact section

--- a/index.html
+++ b/index.html
@@ -218,6 +218,9 @@
           <a href="mailto:fattylee.remod@gmail.com?body=Hello%20Fatai,%20I%20hope%20this%20mail%20meets%20you%20well?%20I%20need%20XYZ...&subject=Software%20Developer%20Job" target="_blank"><i class="fas fa-envelope"></i></a>
         </li>
       </ul>
+<div class="cv-parent">
+      <a class="cv" href="./Fatai_Balogun.pdf" target="_blank" rel="noopener noreferrer">Download my CV</a>
+</div>
     </section>
 
     <footer>Made with <i class="fas fa-heart"></i> by Fatai Balogun</footer>
