--- a/vue/index.html
+++ b/vue/index.html
@@ -24,7 +24,7 @@
       <p>Methods invocation: {{sum(2)}}</p>
       <p v-bind:title="name" style="background-color: peru">
         The next paragraph
-        <button v-on:click="alert">Click me</button>
+        <button v-on:click="num=44;alert(numu)">Click me</button>
       </p>
       <!-- <input
         type="text"
@@ -107,39 +107,22 @@
           </ul>
         </li>
       </ol>
+      <div id="parentElement">
+        <span id="childElement">foo bar</span>
+
+        <!-- v-model="calculateHex('red')" -->
+        <input
+          @keyup="myStyle.last=`#${$event.target.value}`"
+          type="text"
+          placeholder="Enter a color and click enter"
+        />
+        <div v-bind:style="{background:myStyle.last}">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam,
+          mollitia.
+        </div>
+      </div>
     </div>
     <script src="./vue.js"></script>
     <script src="./index.js"></script>
-
-    <div id="parentElement">
-      <span id="childElement">foo bar</span>
-    </div>
-
-    <script>
-      // Create the new node to insert
-      let newNode = document.createElement("div");
-      newNode.innerHTML = "So sweet";
-
-      // Get a reference to the parent node
-      let parentDiv = document.getElementById("childElement").parentNode;
-
-      // Begin test case [ 1 ] : Existing childElement (all works correctly)
-      let sp2 = document.getElementById("childElement");
-      const clonedSp2 = sp2.cloneNode(true);
-      // clonedSp2.textContent = "just a clone";
-      parentDiv.insertBefore(newNode, sp2);
-      parentDiv.appendChild(clonedSp2);
-      // End test case [ 1 ]
-
-      // Begin test case [ 2 ] : childElement is of Type undefined
-      sp2 = undefined; // Non-existent node of id "childElement"
-      // parentDiv.insertBefore(newNode, sp2); // Implicit dynamic cast to type Node
-      // End test case [ 2 ]
-
-      // Begin test case [ 3 ] : childElement is of Type "undefined" ( string )
-      sp2 = "undefined"; // Non-existent node of id "childElement"
-      // parentDiv.insertBefore(newNode, sp2); // Generates "Type Error: Invalid Argument"
-      // End test case [ 3 ]
-    </script>
   </body>
 </html>
