apply CSS variable to improve the theme

--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
   </head>
   <body>
     <nav>
+      <div class="nav max-width">
       <a href="#about" class="branding">FB</a>
       <ul>
         <a href="#about">About</a>
         <a href="#project">Project</a>
         <a href="#contact">Contact</a>
       </ul>
+      </div>
     </nav>
 
     <header id="about">
@@ -73,7 +75,7 @@
             href="https://github.com/Fattylee/fattylee_social_network"
             target="_blank"
             rel="noopener noreferrer"
-            ><i class="fab fa-github"></i
+            ><i class="fab fa-github fa-2x"></i
           ></a>
         </div>
         <div class="project">
@@ -93,7 +95,7 @@
             href="https://github.com/Fattylee/fattylee-storybook"
             target="_blank"
             rel="noopener noreferrer"
-            ><i class="fab fa-github"></i
+            ><i class="fab fa-github fa-2x"></i
           ></a>
         </div>
         <div class="project">
@@ -114,7 +116,7 @@
             href="https://github.com/Fattylee/fattylee-web-chat"
             target="_blank"
             rel="noopener noreferrer"
-            ><i class="fab fa-github"></i
+            ><i class="fab fa-github fa-2x"></i
           ></a>
         </div>
         </a>
@@ -134,7 +136,7 @@
             href="https://github.com/Fattylee/fattylee-storybook/tree/master/client/src/expensify"
             target="_blank"
             rel="noopener noreferrer"
-            ><i class="fab fa-github"></i
+            ><i class="fab fa-github fa-2x"></i
           ></a>
         </div>
         <div class="project">
@@ -151,7 +153,7 @@
             href="https://github.com/Fattylee/fattylee-todos-api"
             target="_blank"
             rel="noopener noreferrer"
-            ><i class="fab fa-github"></i
+            ><i class="fab fa-github fa-2x"></i
           ></a>
         </div>
         <div class="project">
@@ -171,7 +173,7 @@
             href="https://github.com/Fattylee/fattylee-pure-portfolio"
             target="_blank"
             rel="noopener noreferrer"
-            ><i class="fab fa-github"></i
+            ><i class="fab fa-github fa-2x"></i
           ></a>
       
       </div>
@@ -190,32 +192,32 @@
           <a
             href="https://www.linkedin.com/in/fatai-balogun-88754b171/"
             target="_blank"
-            ><i class="fab fa-linkedin"></i
+            ><i class="fab fa-linkedin" title="linkedin page"></i
           ></a>
         </li>
         <li>
           <a href="https://twitter.com/Fattylee7" target="_blank"
-            ><i class="fab fa-twitter"></i
+            ><i class="fab fa-twitter" title="twitter page"></i
           ></a>
         </li>
         <li>
           <a href="https://github.com/Fattylee/" target="_blank"
-            ><i class="fab fa-github"></i
+            ><i class="fab fa-github" title="github page"></i
           ></a>
         </li>
         <li>
           <a href="https://facebook.com/fatai.balogun1" target="_blank"
-            ><i class="fab fa-facebook"></i
+            ><i class="fab fa-facebook" title="facebook page"></i
           ></a>
         </li>
 
         <li>
           <a href="tel:+2348062870354" target="_blank">
-            <i class="fas fa-phone"></i>
+            <i class="fas fa-phone" title="call me"></i>
           </a>
         </li>
         <li>
-          <a href="mailto:fattylee.remod@gmail.com?body=Hello%20Fatai,%20I%20hope%20this%20mail%20meets%20you%20well?%20I%20need%20XYZ...&subject=Software%20Developer%20Job" target="_blank"><i class="fas fa-envelope"></i></a>
+          <a href="mailto:fattylee.remod@gmail.com?body=Hello%20Fatai,%20I%20hope%20this%20mail%20meets%20you%20well?%20I%20need%20XYZ...&subject=Software%20Developer%20Job" target="_blank"><i class="fas fa-envelope" title="send mail"></i></a>
         </li>
       </ul>
 <div class="cv-parent">
