fix nav fontSize

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <link
       rel="shortcut icon"
-      href="https://img.icons8.com/material-outlined/24/000000/monitor.png"
+      href="/images/monitor.png"
       type="image/png"
     />
     <meta charset="UTF-8" />
@@ -22,6 +22,8 @@
     <meta name="author" content="Fatai Balogun" />
 
     <title>Portfolio Website | Fatai Balogun</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
     <script
       src="https://kit.fontawesome.com/13ee76e205.js"
