add lazysizes library for media lazy-loading

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       src="https://kit.fontawesome.com/13ee76e205.js"
       crossorigin="anonymous"
     ></script>
+    <script src="js/lazysizes.min.js" async=""></script>
   </head>
   <body>
     <nav>
@@ -65,7 +66,8 @@
             rel="noopener noreferrer"
           >
             <img
-              src="https://live.staticflickr.com/65535/50852727786_049f4e290c_z.jpg"
+              class="lazyload"
+              data-src="https://live.staticflickr.com/65535/50852727786_049f4e290c_z.jpg"
               alt="sayurs"
             />
             <p>Sayurs</p>
@@ -87,7 +89,8 @@
             rel="noopener noreferrer"
           >
             <img
-              src="https://live.staticflickr.com/65535/50853039501_c2d473ec6b_z.jpg"
+              class="lazyload"
+              data-src="https://live.staticflickr.com/65535/50853039501_c2d473ec6b_z.jpg"
               alt="storybook"
             />
             <p>Storybook</p> </a
@@ -107,7 +110,8 @@
             target="_blank"
           >
             <img
-              src="https://live.staticflickr.com/65535/50915503213_9b11244564_z.jpg"
+              class="lazyload"
+              data-src="https://live.staticflickr.com/65535/50915503213_9b11244564_z.jpg"
               alt="web chat"
             />
             <p>Web chat</p>
@@ -128,7 +132,8 @@
           target="_blank"
         >
           <img
-            src="https://live.staticflickr.com/65535/50916273756_71bfd6767e_z.jpg"
+            class="lazyload"
+            data-src="https://live.staticflickr.com/65535/50916273756_71bfd6767e_z.jpg"
             alt="expensify"
           />
           <p>Expensify</p>
@@ -143,8 +148,9 @@
         </div>
         <div class="project">
           <a href="https://fattylee-todos-api.herokuapp.com" target="_blank">
-            <img
-              src="https://live.staticflickr.com/65535/50918143968_7481213684.jpg"
+             <img
+              class="lazyload"
+              data-src="https://live.staticflickr.com/65535/50918143968_7481213684.jpg"
               alt="fattylee web services api"
             />
             <p>Fattylee web services api</p>
@@ -164,7 +170,8 @@
           target="_blank"
         >
           <img
-            src="https://live.staticflickr.com/65535/50918366788_a9ede53a87.jpg"
+            class="lazyload"
+            data-src="https://live.staticflickr.com/65535/50918366788_a9ede53a87.jpg"
             alt="portfolio website"
           />
           <p>Portfolio Website</p>
