--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
           </a>
         </li>
         <li>
-          <a href="mailto:fattylee.remod@gmail.com?body=Hello%20Fatai,%20I%20hope%20this%20mail%20meets%20you%20well?%20I%20need%20XYZ...&subject=Software%20Developer%20Job" target="_blank"><i class="fas fa-envelope" title="send mail"></i></a>
+          <a href="mailto:fatai.balogun12@gmail.com?body=Hello%20Fatai,%20I%20hope%20this%20mail%20meets%20you%20well?%20I%20need%20XYZ...&subject=Software%20Developer%20Job" target="_blank"><i class="fas fa-envelope" title="send mail"></i></a>
         </li>
       </ul>
 <div class="cv-parent">
