more animation to the navbar

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </nav>
 
     <header id="about">
-      <h1>Hello! 👋</h1>
+      <h1><span class="greetings">Hello! 👋</span>
       <p>I'm Fatai Balogun, a full-stack software engineer.</p>
       <p>
         I'm an experienced Software Engineer with a demonstrated history of
@@ -54,6 +54,7 @@
         that allows me to contribute effectively while also developing my
         skills.
       </p>
+</h1>
     </header>
 
     <section id="project">
@@ -229,11 +230,11 @@
           <a href="mailto:fatai.balogun12@gmail.com?body=Hello%20Fatai,%20I%20hope%20this%20mail%20meets%20you%20well?%20I%20need%20XYZ...&subject=Software%20Developer%20Job" target="_blank"><i class="fas fa-envelope" title="send mail"></i></a>
         </li>
       </ul>
-<div class="cv-parent">
+    <div class="cv-parent">
       <a class="cv" href="./Fatai_Balogun.pdf" target="_blank" rel="noopener noreferrer">Download my CV</a>
-</div>
+    </div>
     </section>
-
     <footer>Made with <i class="fas fa-heart"></i> by Fatai Balogun</footer>
+    <script src="/js/index.js"></script>
   </body>
 </html>
